--- a/serverless.yml
+++ b/serverless.yml
@@ -1,4 +1,4 @@
-service: aws-nodejs-automated
+service: aws-nodejs-shop
 
 frameworkVersion: '2'
 
@@ -17,7 +17,7 @@ plugins:
 
 custom:
   client:
-    bucketName: harret-games--bucket
+    bucketName: harret-games-shop
     distributionFolder: build
     indexDocument: index.html
   s3BucketName: ${self:custom.client.bucketName}
